refactor: migrate from android support to androidx
Signed-off-by: Milad Nekofar <milad@nekofar.com>

--- a/aFileChooser/build.gradle
+++ b/aFileChooser/build.gradle
@@ -28,5 +28,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
